# QA

./: QA.cabal  README.md  login.test
src/: Element.hs  JavaScript.hs  Main.hs  Parser.hs  QA.hs  Test.hs
