name:          QA
version:       0.1.0.0
category:      Testing

license:       PublicDomain
license-file:  LICENSE

author:        Jared Loomis
maintainer:    jaredloomis1@gmail.com

build-type:    Simple
cabal-version: >=1.10

executable QA
  main-is:          Main.hs
  other-modules: QA, Element
  build-depends:
    base >=4.8 && <4.9,
    mtl,
    parsec
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall
